--- a/Ordering.API/appsettings.json
+++ b/Ordering.API/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "Database": "Server=localhost;Database=OrderDb;User Id=sa;Password=Sw123456789;Encrypt=False;TrustServerCertification=True"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment" :  true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
