--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,6 +10,9 @@ services:
   distributedcache:
     image: redis 
 
+  messagebroker:
+    image: rabbitmq:management  
+
   orderdb:
     image: mcr.microsoft.com/mssql/server
 
