--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -47,21 +47,27 @@
       "catalog-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://catalog.api:6000"
+            "Address": "http://catalog.api:8080"
+            // for local development, use the following line instead
+            //"Address": "http://localhost:6000"
           }
         }
       },
       "basket-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://basket.api:6001"
+            "Address": "http://basket.api:8080"
+            // for local development, use the following line instead
+            //"Address": "http://localhost:6001"
           }
         }
       },
       "order-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://ordering.api:6003"
+            "Address": "http://ordering.api:8080"
+            // for local development, use the following line instead
+            //"Address": "http://localhost:6003"
           }
         }
       }
