--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -4,7 +4,7 @@
     "Redis": "localhost:6379"
   },
   "GrpcSettings": {
-    "DiscountUrl": "https//localhost:5052"
+    "DiscountUrl": "https://localhost:5052"
   },
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
